# NdkFrist

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sunql/ndkfrist/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: demo-lib.cpp  test-demo.cpp
app/src/main/java/com/sunql/ndkfrist/: JniLoader.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/sunql/ndkfrist/: ExampleUnitTest.java
